fix: use black as input color on safari

--- a/Main/styles/common/_styled-inputs.scss
+++ b/Main/styles/common/_styled-inputs.scss
@@ -11,6 +11,7 @@
     button {
         font-size: inherit;
         max-width: 100%;
+        color: black; /* Safari default color is not black */
 
         padding: 7.5px 15px;
         border: 0px;
